# jovian-careers-website-with-Flask

./: LICENSE  README.md  app.py  database.py  pyproject.toml
templates/: application_form.html  application_submitted.html  banner.html  bootstrap.html  home.html  jobitem.html  jobpage.html  navbar.html
